--- a/mission-history.html
+++ b/mission-history.html
@@ -14,6 +14,9 @@
         .font-heading { font-family: 'Playfair Display', serif; }
         .nigeria-green { color: #008751; }
         .nigeria-green-bg { background-color: #008751; }
+        header {
+            border-bottom: 4px solid #008751;
+        }
         .dropdown .dropdown-content { display: none; }
         .dropdown-content { position: absolute; background-color: white; min-width: 240px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; border-radius: 0.5rem; padding: 0.5rem 0; border-top: 3px solid #008751; }
         .dropdown-content a { color: black; padding: 12px 16px; text-decoration: none; display: block; font-size: 0.9rem; }
@@ -66,53 +69,72 @@
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 w-full z-10">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <a href="index.html" class="flex items-center space-x-3">
-                <img src="images/logo.png" alt="Nigerian Coat of Arms" class="h-12 w-12">
-                <div>
-                    <h1 class="text-lg font-bold nigeria-green font-heading">Embassy of Nigeria</h1>
-                    <p class="text-xs text-gray-600">Prague, Czech Republic</p>
+             <div class="flex items-center">
+                <a href="index.html" class="flex items-center space-x-3">
+                    <img src="images/logo.png" alt="Nigerian Coat of Arms" class="h-12 w-12">
+                    <div>
+                        <h1 class="text-lg font-bold nigeria-green font-heading">Embassy of Nigeria</h1>
+                        <p class="text-xs text-gray-600">Prague, Czech Republic</p>
+                    </div>
+                </a>
+                <div class="hidden xl:flex items-center text-sm text-gray-500 ml-8 pl-8 border-l border-gray-200">
+                    <i class="fas fa-clock mr-2 nigeria-green"></i>
+                    <span id="prague-time"></span>
                 </div>
-            </a>
-            <div class="hidden lg:flex items-center space-x-6 text-sm font-semibold">
-                <a href="index.html" class="text-gray-600 hover:nigeria-green">Home</a>
-                <div class="dropdown relative">
-                    <button class="dropdown-toggle nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
-                    <div class="dropdown-content">
-                        <a href="ambassador.html">Ambassador's Welcome</a>
-                        <a href="mission-history.html">History of the Mission</a>
-                        <a href="our-team.html">Our Team</a>
+            </div>
+            <div class="hidden lg:flex items-center">
+                <div class="flex items-center space-x-6 text-sm font-semibold">
+                    <a href="index.html" class="text-gray-600 hover:nigeria-green">Home</a>
+                    <div class="dropdown relative">
+                        <button class="dropdown-toggle nigeria-green inline-flex items-center">About Us <i class="fas fa-chevron-down text-xs ml-2"></i></button>
+                        <div class="dropdown-content">
+                            <a href="ambassador.html">Ambassador's Welcome</a>
+                            <a href="mission-history.html">History of the Mission</a>
+                            <a href="our-team.html">Our Team</a>
+                        </div>
+                    </div>
+                    <div class="dropdown relative">
+                        <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Nigeria <i class="fas fa-chevron-down text-xs ml-2"></i></button>
+                        <div class="dropdown-content">
+                            <a href="nigeria-history.html">History & People</a>
+                            <a href="nigeria-culture.html">Culture & Tourism</a>
+                            <a href="nigeria-economy.html">Economy & Investment</a>
+                            <a href="nigeria-symbols.html">National Symbols</a>
+                        </div>
+                    </div>
+                    <div class="dropdown relative">
+                        <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Services <i class="fas fa-chevron-down text-xs ml-2"></i></button>
+                        <div class="dropdown-content">
+                            <a href="visas.html">Visa Services</a>
+                            <a href="etc.html">Emergency Travel Certificate</a>
+                            <hr class="my-1">
+                            <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Document Legalization</span>
+                            <a href="age-declaration.html">Age Declaration</a>
+                            <a href="citizens-identification.html">Citizens Identification</a>
+                            <a href="change-of-profession.html">Change of Profession</a>
+                            <a href="burial-permit.html">Burial Transit Permit</a>
+                        </div>
+                    </div>
+                    <div class="dropdown relative">
+                        <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Press Center <i class="fas fa-chevron-down text-xs ml-2"></i></button>
+                        <div class="dropdown-content">
+                            <a href="news.html">Latest News</a>
+                            <a href="gallery.html">Photo Gallery</a>
+                        </div>
+                    </div>
+                    <a href="contact.html" class="text-gray-600 hover:nigeria-green">Contact Us</a>
+                </div>
+                <div class="flex items-center ml-6 pl-6 border-l border-gray-200">
+                    <div class="hidden xl:flex items-center text-sm text-gray-600 mr-6">
+                        <i class="fas fa-phone-alt mr-2 nigeria-green"></i>
+                        <span>+420 220 561 040</span>
+                    </div>
+                    <div class="flex items-center space-x-4">
+                        <a href="https://x.com/NigeriaInPrague" class="text-gray-500 hover:nigeria-green transition-colors" title="Follow us on X"><i class="fa-brands fa-x-twitter text-xl"></i></a>
+                        <a href="https://facebook.com/NigeriaInPrague" class="text-gray-500 hover:nigeria-green transition-colors" title="Follow us on Facebook"><i class="fab fa-facebook-f text-xl"></i></a>
+                        <a href="https://instagram.com/NigeriaInPrague" class="text-gray-500 hover:nigeria-green transition-colors" title="Follow us on Instagram"><i class="fab fa-instagram text-xl"></i></a>
                     </div>
                 </div>
-                <div class="dropdown relative">
-                    <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Nigeria <i class="fas fa-chevron-down text-xs ml-2"></i></button>
-                    <div class="dropdown-content">
-                        <a href="nigeria-history.html">History & People</a>
-                        <a href="nigeria-culture.html">Culture & Tourism</a>
-                        <a href="nigeria-economy.html">Economy & Investment</a>
-                        <a href="nigeria-symbols.html">National Symbols</a>
-                    </div>
-                </div>
-                <div class="dropdown relative">
-                    <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Services <i class="fas fa-chevron-down text-xs ml-2"></i></button>
-                    <div class="dropdown-content">
-                        <a href="visas.html">Visa Services</a>
-                        <a href="etc.html">Emergency Travel Certificate</a>
-                        <hr class="my-1">
-                        <span class="block px-4 pt-2 pb-1 text-xs text-gray-500 font-semibold uppercase">Document Legalization</span>
-                        <a href="age-declaration.html">Age Declaration</a>
-                        <a href="citizens-identification.html">Citizens Identification</a>
-                        <a href="change-of-profession.html">Change of Profession</a>
-                        <a href="burial-permit.html">Burial Transit Permit</a>
-                    </div>
-                </div>
-                <div class="dropdown relative">
-                    <button class="dropdown-toggle text-gray-600 hover:nigeria-green inline-flex items-center">Press Center <i class="fas fa-chevron-down text-xs ml-2"></i></button>
-                    <div class="dropdown-content">
-                        <a href="news.html">Latest News</a>
-                        <a href="gallery.html">Photo Gallery</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="text-gray-600 hover:nigeria-green">Contact Us</a>
             </div>
             <div class="lg:hidden">
                 <button id="mobile-menu-button" class="text-gray-600 focus:outline-none"><i class="fas fa-bars text-2xl"></i></button>
@@ -135,11 +157,18 @@
             <section class="py-20">
                 <div class="container mx-auto px-6">
                     <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-3d-effect">
-                        <div class="prose max-w-none text-gray-700 space-y-4">
-                            <p>The Embassy of the Federal Republic of Nigeria in Prague was established to foster diplomatic relations between Nigeria and the Czech Republic, which was then part of Czechoslovakia. Formal diplomatic ties were established shortly after Nigeria gained independence in 1960, marking the beginning of a long and fruitful relationship based on mutual respect and shared interests.</p>
-                            <p>Initially, diplomatic representation was handled through the Nigerian Embassy in Warsaw, Poland. Recognizing the growing importance of bilateral relations, the Nigerian government established a resident mission in Prague in [Year of Establishment]. The first resident Ambassador, H.E. [First Ambassador's Name], presented his credentials on [Date], officially opening the Embassy.</p>
-                            <p>Since its inception, the Embassy has been committed to promoting trade, investment, and cultural exchange between the two nations. It serves as a vital link for the Nigerian diaspora in the Czech Republic, providing essential consular services and fostering a sense of community. Over the years, the Mission has facilitated numerous high-level visits and agreements that have strengthened the partnership between Nigeria and the Czech Republic in areas such as education, technology, and security.</p>
-                            <p>Today, the Embassy continues to build upon this strong foundation, working tirelessly to advance Nigeria's interests and support its citizens abroad under the leadership of the current Ambassador, H.E. Dr. Maureen Tamuno.</p>
+                        <div class="prose max-w-none text-gray-700 space-y-6">
+                            <p>The diplomatic relations between the Federal Republic of Nigeria and the Czech Republic (formerly Czechoslovakia) were formally established shortly after Nigeria gained independence in 1960. The Embassy of Nigeria in Prague was opened to foster mutual understanding, cooperation, and friendship between the two nations.</p>
+                            
+                            <h2 class="font-heading text-2xl nigeria-green">Founding and Early Years</h2>
+                            <p>The Mission began its operations with a focus on establishing political and economic ties. During the early years, the relationship was centered on trade in commodities and light industrial goods. The Embassy played a crucial role in navigating the complexities of the Cold War era, maintaining a stance of non-alignment while building partnerships that were beneficial to Nigeria's development.</p>
+
+                            <h2 class="font-heading text-2xl nigeria-green">Strengthening Bilateral Ties</h2>
+                            <p>Following the democratic transition in both countries, the relationship entered a new, dynamic phase. The Embassy's mandate expanded to include the promotion of democratic values, human rights, and good governance. Key areas of cooperation have included education, with many Nigerian students pursuing higher education in Czech universities, particularly in medicine and engineering.</p>
+                            
+                            <h2 class="font-heading text-2xl nigeria-green">The Embassy Today</h2>
+                            <p>Today, the Embassy of Nigeria in Prague continues to serve as a vital link between the two countries. Our focus is on enhancing economic diplomacy by promoting trade and attracting foreign direct investment into Nigeria's growing economy. We also provide a wide range of consular services to the Nigerian community in the Czech Republic and those wishing to travel to Nigeria.</p>
+                            <p>The Mission remains committed to protecting the interests of Nigerian citizens, promoting Nigeria's rich cultural heritage, and strengthening the bonds of friendship and cooperation with the government and people of the Czech Republic for our mutual benefit.</p>
                         </div>
                     </div>
                 </div>
@@ -152,16 +181,18 @@
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div><h4 class="font-bold text-xl mb-4 font-heading">About the Embassy</h4><p class="text-sm">The Embassy of the Federal Republic of Nigeria in Prague is the official diplomatic representation of Nigeria in the Czech Republic.</p></div>
-                <div><h4 class="font-bold text-xl mb-4 font-heading">Quick Links</h4><ul class="text-sm space-y-2"><li class="hover:underline"><a href="visas.html">Visa Services</a></li><li class="hover:underline"><a href="etc.html">Emergency Travel</a></li><li class="hover:underline"><a href="news.html">Latest News</a></li></ul></div>
+                <div><h4 class="font-bold text-xl mb-4 font-heading">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
                 <div>
-                    <h4 class="font-bold text-xl mb-4 font-heading">Follow Us</h4>
-                    <div class="flex space-x-4">
-                        <a href="https://x.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-twitter text-2xl"></i></a>
-                        <a href="https://facebook.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-facebook-f text-2xl"></i></a>
-                        <a href="https://instagram.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-instagram text-2xl"></i></a>
-                    </div>
+                    <h4 class="font-bold text-xl mb-4 font-heading">Consular Hours</h4>
+                    <ul class="text-sm space-y-2">
+                        <li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li>
+                        <li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li>
+                    </ul>
                 </div>
-                <div><h4 class="font-bold text-xl mb-4 font-heading">Consular Hours</h4><ul class="text-sm space-y-2"><li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li><li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li></ul></div>
+                <div>
+                    <h4 class="font-bold text-xl mb-4 font-heading">Our Location</h4>
+                    <iframe src="https://maps.google.com/maps?q=Na%20%C4%8Cihadle%2032,%20160%2000%20Praha%206&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" class="rounded-lg"></iframe>
+                </div>
             </div>
             <div class="border-t border-gray-100 opacity-50 mt-10 pt-6 text-center text-sm"><p>&copy; 2025 Embassy of Nigeria, Prague. All Rights Reserved.</p></div>
         </div>
@@ -170,6 +201,17 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // JS for menus and translation
+            function updateTime() {
+                const timeEl = document.getElementById('prague-time');
+                if (timeEl) {
+                    const now = new Date();
+                    const options = { timeZone: 'Europe/Prague', weekday: 'short', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit' };
+                    timeEl.textContent = now.toLocaleString('en-US', options);
+                }
+            }
+            updateTime();
+            setInterval(updateTime, 1000 * 60);
+
             const dropdownToggles = document.querySelectorAll('.dropdown-toggle');
             dropdownToggles.forEach(toggle => {
                 toggle.addEventListener('click', function(event) {
@@ -182,11 +224,11 @@
             window.addEventListener('click', () => document.querySelectorAll('.dropdown-content').forEach(d => d.style.display = 'none'));
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
-            const navHtml = document.querySelector('.hidden.lg\\:flex').innerHTML;
+            const navContainer = document.querySelector('.hidden.lg\\:flex');
             mobileMenuButton.addEventListener('click', function() {
                 mobileMenu.classList.toggle('hidden');
                 if (!mobileMenu.classList.contains('hidden')) {
-                    mobileMenu.innerHTML = navHtml;
+                    mobileMenu.innerHTML = navContainer.innerHTML;
                     mobileMenu.querySelectorAll('.dropdown-toggle').forEach(toggle => {
                         toggle.addEventListener('click', function(e) {
                             e.preventDefault();
