--- a/nigeria-symbols.html
+++ b/nigeria-symbols.html
@@ -186,7 +186,7 @@
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-center">
                                 <div class="card-3d-effect bg-gray-50 p-6 rounded-lg">
                                     <h3 class="font-heading text-xl nigeria-green">The National Anthem</h3>
-                                    <p class="text-gray-700 mt-2 italic">"I
+                                    <p class="text-gray-700 mt-2 italic">"I:
 Nigeria, we hail thee,
 Our own dear native land,
 Though tribe and tongue may differ,
@@ -194,7 +194,7 @@ In brotherhood we stand
 Nigerians all,
 And proud to serve our sovereign Motherland.
 
-II
+II:
 Our flag shall be a symbol
 That truth and justice reign,
 In peace or battle honoured,
@@ -202,17 +202,21 @@ And this we count as gain,
 To hand on to our children
 A banner without stain.
 
-III
+III:
 O God of all creation,
 Grant this our one request:
 Help us to build a nation
 Where no man is oppressed,
 And so with peace and plenty
-Nigeria may be blessed...."</p>
+Nigeria may be blessed."</p>
                                 </div>
                                 <div class="card-3d-effect bg-gray-50 p-6 rounded-lg">
                                     <h3 class="font-heading text-xl nigeria-green">The National Pledge</h3>
-                                    <p class="text-gray-700 mt-2 italic">"I pledge to Nigeria my country, to be faithful, loyal and honest..."</p>
+                                    <p class="text-gray-700 mt-2 italic">"I pledge to Nigeria, my country
+To be faithful, loyal and honest
+To serve Nigeria with all my strength
+To defend her unity and uphold her honour and glory
+So help me, God."</p>
                                 </div>
                             </div>
                         </div>
