--- a/gallery.html
+++ b/gallery.html
@@ -63,6 +63,12 @@
         .gallery-item:hover .overlay {
             opacity: 1;
         }
+        .gallery-item img {
+            transition: transform 0.4s ease-out;
+        }
+        .gallery-item:hover img {
+            transform: scale(1.1);
+        }
     </style>
 </head>
 <body class="bg-gray-100">
@@ -153,9 +159,12 @@
 
     <main>
         <!-- Page Title Header -->
-        <section class="bg-gray-200 py-12">
-            <div class="container mx-auto px-6">
-                <h1 class="text-4xl font-bold font-heading text-gray-800">Photo Gallery</h1>
+        <section class="relative py-20 text-white">
+            <!-- Add a real image path to your images folder -->
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+            <div class="container mx-auto px-6 relative z-10">
+                <h1 class="text-4xl font-bold font-heading">Photo Gallery</h1>
             </div>
         </section>
 
