--- a/ambassador.html
+++ b/ambassador.html
@@ -146,9 +146,11 @@
 
     <main>
         <!-- Page Title Header -->
-        <section class="bg-gray-200 py-12">
-            <div class="container mx-auto px-6">
-                <h1 class="text-4xl font-bold font-heading text-gray-800">Ambassador's Welcome</h1>
+        <section class="relative py-20 text-white">
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+            <div class="container mx-auto px-6 relative z-10">
+                <h1 class="text-4xl font-bold font-heading">Ambassador's Welcome</h1>
             </div>
         </section>
 
@@ -203,7 +205,7 @@
     
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            // Live Clock
+            // JS for menus and translation
             function updateTime() {
                 const timeEl = document.getElementById('prague-time');
                 if (timeEl) {
@@ -215,7 +217,6 @@
             updateTime();
             setInterval(updateTime, 1000 * 60);
 
-            // Desktop dropdowns
             const dropdownToggles = document.querySelectorAll('.dropdown-toggle');
             dropdownToggles.forEach(toggle => {
                 toggle.addEventListener('click', function(event) {
