--- a/nigeria-symbols.html
+++ b/nigeria-symbols.html
@@ -146,9 +146,11 @@
 
     <main>
         <!-- Page Title Header -->
-        <section class="bg-gray-200 py-12">
-            <div class="container mx-auto px-6">
-                <h1 class="text-4xl font-bold font-heading text-gray-800">National Symbols</h1>
+        <section class="relative py-20 text-white">
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+            <div class="container mx-auto px-6 relative z-10">
+                <h1 class="text-4xl font-bold font-heading">National Symbols</h1>
             </div>
         </section>
 
@@ -163,7 +165,7 @@
                                 <p class="text-gray-700">The Nigerian flag was designed in 1959 and first officially hoisted on October 1, 1960. The flag has three vertical bands of green, white, and green. The two green stripes represent Nigeria's natural wealth and rich agricultural land, while the white band in the middle represents peace and unity.</p>
                             </div>
                             <div class="card-3d-effect">
-                                <img src="images/nigerian-flag.png" alt="The National Flag of Nigeria" class="rounded-lg shadow-md w-full">
+                                <img src="images/nigerian-flag-large.jpg" alt="The National Flag of Nigeria" class="rounded-lg shadow-md w-full">
                             </div>
                         </div>
 
@@ -186,37 +188,11 @@
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-center">
                                 <div class="card-3d-effect bg-gray-50 p-6 rounded-lg">
                                     <h3 class="font-heading text-xl nigeria-green">The National Anthem</h3>
-                                    <p class="text-gray-700 mt-2 italic">"I:
-Nigeria, we hail thee,
-Our own dear native land,
-Though tribe and tongue may differ,
-In brotherhood we stand
-Nigerians all,
-And proud to serve our sovereign Motherland.
-
-II:
-Our flag shall be a symbol
-That truth and justice reign,
-In peace or battle honoured,
-And this we count as gain,
-To hand on to our children
-A banner without stain.
-
-III:
-O God of all creation,
-Grant this our one request:
-Help us to build a nation
-Where no man is oppressed,
-And so with peace and plenty
-Nigeria may be blessed."</p>
+                                    <p class="text-gray-700 mt-2 italic">"Arise, O Compatriots, Nigeria's call obey..."</p>
                                 </div>
                                 <div class="card-3d-effect bg-gray-50 p-6 rounded-lg">
                                     <h3 class="font-heading text-xl nigeria-green">The National Pledge</h3>
-                                    <p class="text-gray-700 mt-2 italic">"I pledge to Nigeria, my country
-To be faithful, loyal and honest
-To serve Nigeria with all my strength
-To defend her unity and uphold her honour and glory
-So help me, God."</p>
+                                    <p class="text-gray-700 mt-2 italic">"I pledge to Nigeria my country, to be faithful, loyal and honest..."</p>
                                 </div>
                             </div>
                         </div>
