--- a/burial-permit.html
+++ b/burial-permit.html
@@ -146,9 +146,11 @@
 
     <main>
         <!-- Page Title Header -->
-        <section class="bg-gray-200 py-12">
-            <div class="container mx-auto px-6">
-                <h1 class="text-4xl font-bold font-heading text-gray-800">Burial Transit Permit</h1>
+        <section class="relative py-20 text-white">
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+            <div class="container mx-auto px-6 relative z-10">
+                <h1 class="text-4xl font-bold font-heading">Burial Transit Permit</h1>
             </div>
         </section>
 
