--- a/news.html
+++ b/news.html
@@ -146,9 +146,11 @@
 
     <main>
         <!-- Page Title Header -->
-        <section class="bg-gray-200 py-12">
-            <div class="container mx-auto px-6">
-                <h1 class="text-4xl font-bold font-heading text-gray-800">Latest News</h1>
+        <section class="relative py-20 text-white">
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+            <div class="container mx-auto px-6 relative z-10">
+                <h1 class="text-4xl font-bold font-heading">Latest News</h1>
             </div>
         </section>
 
@@ -159,7 +161,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                         <!-- News Card 1 -->
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden card-3d-effect">
-                            <img src="images/news-event1.png" alt="Community event" class="w-full h-56 object-cover">
+                            <img src="images/news-event1.jpg" alt="Community event" class="w-full h-56 object-cover">
                             <div class="p-6">
                                 <span class="text-sm text-gray-500">September 1, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">Embassy Celebrates Nigerian Independence Day</h2>
@@ -169,7 +171,7 @@
                         </div>
                         <!-- News Card 2 -->
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden card-3d-effect">
-                            <img src="images/news-event2.png" alt="Online booking system" class="w-full h-56 object-cover">
+                            <img src="images/news-event2.jpg" alt="Online booking system" class="w-full h-56 object-cover">
                             <div class="p-6">
                                 <span class="text-sm text-gray-500">August 25, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">New Consular Appointment System Launched</h2>
@@ -179,7 +181,7 @@
                         </div>
                         <!-- News Card 3 -->
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden card-3d-effect">
-                            <img src="images/news-event3.png" alt="Business forum" class="w-full h-56 object-cover">
+                            <img src="images/news-event3.jpg" alt="Business forum" class="w-full h-56 object-cover">
                             <div class="p-6">
                                 <span class="text-sm text-gray-500">August 15, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">Nigeria-Czech Business Forum Announced</h2>
