--- a/contact.html
+++ b/contact.html
@@ -153,10 +153,12 @@
 
     <main>
         <!-- Page Title Header -->
-        <section class="bg-gray-200 py-12">
-            <div class="container mx-auto px-6">
-                <h1 class="text-4xl font-bold font-heading text-gray-800">Contact Us</h1>
-                <p class="text-gray-600 mt-2">We are here to help. Reach out to us through any of the channels below.</p>
+        <section class="relative py-20 text-white">
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
+            <div class="absolute inset-0 bg-black opacity-50"></div>
+            <div class="container mx-auto px-6 relative z-10">
+                <h1 class="text-4xl font-bold font-heading">Contact Us</h1>
+                <p class="text-gray-200 mt-2">We are here to help. Reach out to us through any of the channels below.</p>
             </div>
         </section>
 
