--- a/news.html
+++ b/news.html
@@ -161,7 +161,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                         <!-- News Card 1 -->
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden card-3d-effect">
-                            <img src="images/news-event1.jpg" alt="Community event" class="w-full h-56 object-cover">
+                            <img src="images/news-event1.png" alt="Community event" class="w-full h-56 object-cover">
                             <div class="p-6">
                                 <span class="text-sm text-gray-500">September 1, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">Embassy Celebrates Nigerian Independence Day</h2>
@@ -171,7 +171,7 @@
                         </div>
                         <!-- News Card 2 -->
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden card-3d-effect">
-                            <img src="images/news-event2.jpg" alt="Online booking system" class="w-full h-56 object-cover">
+                            <img src="images/news-event2.png" alt="Online booking system" class="w-full h-56 object-cover">
                             <div class="p-6">
                                 <span class="text-sm text-gray-500">August 25, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">New Consular Appointment System Launched</h2>
@@ -181,7 +181,7 @@
                         </div>
                         <!-- News Card 3 -->
                         <div class="bg-white rounded-lg shadow-lg overflow-hidden card-3d-effect">
-                            <img src="images/news-event3.jpg" alt="Business forum" class="w-full h-56 object-cover">
+                            <img src="images/news-event3.png" alt="Business forum" class="w-full h-56 object-cover">
                             <div class="p-6">
                                 <span class="text-sm text-gray-500">August 15, 2025</span>
                                 <h2 class="font-heading text-2xl font-bold my-2 nigeria-green">Nigeria-Czech Business Forum Announced</h2>
