--- a/nigeria-symbols.html
+++ b/nigeria-symbols.html
@@ -147,7 +147,7 @@
     <main>
         <!-- Page Title Header -->
         <section class="relative py-20 text-white">
-            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/symbols-background.png');"></div>
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="container mx-auto px-6 relative z-10">
                 <h1 class="text-4xl font-bold font-heading">National Symbols</h1>
