--- a/our-team.html
+++ b/our-team.html
@@ -24,11 +24,11 @@
         .main-content-bg {
             background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23e2e8f0' fill-opacity='0.4'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
         }
-        .card-3d-effect {
+        .card-lift-effect {
             transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
         }
-        .card-3d-effect:hover {
-            transform: translateY(-8px) perspective(1000px) rotateY(-3deg);
+        .card-lift-effect:hover {
+            transform: translateY(-8px);
             box-shadow: 0 25px 40px -15px rgba(0,0,0,0.2);
         }
         .translate-button {
@@ -158,7 +158,7 @@
         <div class="main-content-bg">
             <section class="py-20">
                 <div class="container mx-auto px-6">
-                    <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-3d-effect">
+                    <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-lift-effect">
                         <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">Our dedicated team of diplomats and local staff are committed to serving the needs of our community and strengthening the ties between Nigeria and the Czech Republic.</p>
                         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 max-w-5xl mx-auto">
                             <!-- Ambassador Profile -->
@@ -259,3 +259,4 @@
     </script>
 </body>
 </html>
+
