--- a/nigeria-symbols.html
+++ b/nigeria-symbols.html
@@ -147,7 +147,7 @@
     <main>
         <!-- Page Title Header -->
         <section class="relative py-20 text-white">
-            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/header-background.jpg');"></div>
+            <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/symbols-background.png');"></div>
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="container mx-auto px-6 relative z-10">
                 <h1 class="text-4xl font-bold font-heading">National Symbols</h1>
@@ -165,7 +165,7 @@
                                 <p class="text-gray-700">The Nigerian flag was designed in 1959 and first officially hoisted on October 1, 1960. The flag has three vertical bands of green, white, and green. The two green stripes represent Nigeria's natural wealth and rich agricultural land, while the white band in the middle represents peace and unity.</p>
                             </div>
                             <div class="card-lift-effect">
-                                <img src="images/nigerian-flag-large.jpg" alt="The National Flag of Nigeria" class="rounded-lg shadow-md w-full">
+                                <img src="images/nigerian-flag.png" alt="The National Flag of Nigeria" class="rounded-lg shadow-md w-full">
                             </div>
                         </div>
 
